pkp/pkp-lib#1922 Use new pagination technique for issues.
This commit uses the new pagination template introduced in pkp-lib
for the issue archives. It also introduces a getter method for the
IssueService class and makes use of it in the REST API.
